<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.beyable.sdkdemo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_xml"
        android:name="com.beyable.sdkdemo.ui.xml.categories.XmlCategoriesFragment"
        android:label="@string/title_nav_xml"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_compose"
        android:name="com.beyable.sdkdemo.ui.compose.categories.ComposeCategoriesFragment"
        android:label="@string/title_nav_compose"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.beyable.sdkdemo.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>