<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preferences.PreferencesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Display2"
            android:paddingTop="@dimen/padding_xxbig"
            android:paddingStart="@dimen/padding_big"
            android:paddingEnd="@dimen/padding_big"
            android:paddingBottom="@dimen/padding_big"
            android:text="@string/title_settings"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"/>

        <RelativeLayout
            android:id="@+id/urlContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_xbig"
            android:layout_below="@id/title_view">
            <TextView
                android:id="@+id/url_and_key_title_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferences_url_ws_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"/>
            <Spinner
                android:id="@+id/url_spinner_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/url_and_key_title_view"
                android:layout_marginBottom="@dimen/padding_xbig"/>
            <LinearLayout
                android:id="@+id/url_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/url_spinner_view">
                <TextView
                    android:id="@+id/url_title_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preferences_url_title"
                    android:textColor="@color/black"
                    android:alpha="0.8"
                    android:textSize="@dimen/text_size_small"/>
                <TextView
                    android:id="@+id/url_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_default"
                    android:textColor="@color/black"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_big"/>
                <EditText
                    android:id="@+id/url_edit_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/url_spinner_view"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:hint="@string/preferences_url_title"
                    android:tooltipText="@string/preferences_url_title"
                    android:layout_marginBottom="@dimen/padding_big"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/key_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/url_container">
                <TextView
                    android:id="@+id/key_title_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preferences_key_title"
                    android:textColor="@color/black"
                    android:alpha="0.8"
                    android:textSize="@dimen/text_size_small"/>
                <TextView
                    android:id="@+id/key_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_default"
                    android:textColor="@color/black"
                    android:paddingStart="@dimen/padding_default"
                    android:paddingEnd="@dimen/padding_default"
                    android:paddingBottom="@dimen/padding_big"/>
                <EditText
                    android:id="@+id/key_edit_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tooltipText="@string/preferences_key_title"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:hint="@string/preferences_key_title"/>
            </LinearLayout>
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/validate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/padding_xbig"
            android:text="@string/preferences_validate_changes"
            android:visibility="gone"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>